Ensure headers are visible when empty

--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -52,7 +52,7 @@ body table thead { display: table-header-group; }
 body table tbody { display: table-row-group; }
 body table tr { display: table-row; }
 body table th, body table td { display: table-cell; }
-body table th { text-align: left; }
+body table th { text-align: left; height: 19px; /* height works as min-height for table-cells because tables are weird. */ }
 body table th * { display: inline-block; }
 
 @-webkit-keyframes horrifyingly-organic-pulsation {
